--- a/src/sass/components/area.scss
+++ b/src/sass/components/area.scss
@@ -1,4 +1,11 @@
 .rgb__area {
-    width: 400px;
-    height: 400px;
+    width: 80%;
+    max-width: 400px;
+    margin: 25px auto;
+
+    &:after {
+        content: "";
+        display: block;
+        padding-top: 100%;
+    }
 }
